Fix behaviour on iphone

--- a/src/app/app.theme.scss
+++ b/src/app/app.theme.scss
@@ -111,4 +111,6 @@ body.theme-default {
 
 .mat-menu-item {
     outline: 0 !important;
+    background-color: white;
+    border-bottom: 1px solid grey;
 }
