--- a/src/app/layout/cage/cage.component.scss
+++ b/src/app/layout/cage/cage.component.scss
@@ -15,6 +15,7 @@ cage {
     display: flex;
     flex-direction: column;
     flex-grow: 1;
+    -webkit-overflow-scrolling: touch;
 }
 
 .content__container {
